fixed spacing between slideshow elements when css is compiled

--- a/views/site/sports.styl
+++ b/views/site/sports.styl
@@ -88,8 +88,7 @@ body section > #sports
                      cursor pointer
                      width right-width - margin
                      display inline-block
-                     margin 0px
-                     margin-bottom 13px
+                     margin 0px 0px 13px 0px
                      padding-right padding-right
                      padding-top 3px
                      font-size 1.2em
